--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.8.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
